@@ -5,7 +5,11 @@ squid3 (3.0.STABLE8-2) UNRELEASED; urgency=low
   * debian/squid3.postinst
     - Fixed non-POSIX option to chown (Closes: #491701)
 
- -- Luigi Gangitano <luigi@debian.org>  Mon, 21 Oct 2008 00:02:48 +0200
+  * debian/rules
+    - Removed obsoleted configure options (Closes: 511272)
+    - Added --enable-follow-x-forwarded-for configure option
+
+ -- Luigi Gangitano <luigi@debian.org>  Fri,  9 Jan 2009 00:02:48 +0200
 
 squid3 (3.0.STABLE8-1) unstable; urgency=high
 
